Landing page complete

--- a/content/css/sprite/landing.css
+++ b/content/css/sprite/landing.css
@@ -5,3 +5,21 @@
 .logo_technothlon {width:800px; height:180px; background-position: -230px -114px}
 .logo_technothlon_square {width:95px; height:90px; background-position: -2px -335px}
 .mascot_technothlon_no_text {width:226px; height:331px; background-position: -2px -2px}
+
+@media (max-width: 800px) and (min-width: 600px){
+    .sprite-logos{
+        zoom: .7;
+    }
+}
+
+@media (max-width: 600px) and (min-width: 380px){
+    .sprite-logos{
+        zoom: .5;
+    }
+}
+
+@media (max-width: 380px) and (min-width: 100px){
+    .sprite-logos{
+        zoom: .3;
+    }
+}
